# llandv

./: .gitignore  manage.py  package-lock.json  pyproject.toml
llandv/: asgi.py  decorators.py  forms.py  urls.py  views.py  wsgi.py
llandv/settings/: dev.py  prod.py
llandv/static/llandv/css/: output.css
llandv/templates/llandv/: about.html  contact.html  home.html  layout.html
portfolio/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
portfolio/fixtures/portfolio/: test_galleries.json  test_posts.json
portfolio/migrations/: 0001_initial.py  0002_contactformresponse.py  0003_remove_gallery_hidden.py  0004_alter_gallery_posts.py
portfolio/templates/portfolio/: about.html  contact.html  contact_form.html  contact_form_success.html  gallery.html  gallery_detail.html  gallery_list.html  home.html  layout.html  post.html  post_detail.html
portfolio/templates/portfolio/emails/: contact_form_response.txt
