[project]
name = "llandv"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["django>=6.0.6", "django-storages[s3]>=1.14.6"]

[tool.pyright]
strictListInference = false
strictDictionaryInference = false
strictSetInference = false
typeCheckingMode = "basic"

[tool.ruff]
exclude = [
    ".git",
    ".gitignore",
    ".venv",
    "venv",
    ".vscode",
    "__pycache__",
    "node_modules",
    "site-packages",
    "dist",
    "build",
]
line-length = 79
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "DJ"]
ignore = ["DJ001", "F821"]
fixable = ["ALL"]
unfixable = []
extend-per-file-ignores = { "*/migrations/*.py" = ["E501"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = false
skip-magic-trailing-comma = true

[dependency-groups]
deploy = [
    "certifi>=2026.6.17",
    "gunicorn>=26.0.0",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.12",
]
